--- a/src/site.css
+++ b/src/site.css
@@ -13,6 +13,12 @@ main#main-content {
   flex-grow: 1;
 }
 
+.loading-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .rb-no-recipe-results-container {
   display: flex;
   flex-direction: column;
