--- a/src/site.css
+++ b/src/site.css
@@ -13,10 +13,24 @@ main#main-content {
   flex-grow: 1;
 }
 
+.footer-container {
+  color: #fff;
+  padding: 24px 0;
+  box-shadow:
+    0px -2px 4px -1px rgba(0,0,0,0.2),
+    0px -4px 5px 0px rgba(0,0,0,0.14),
+    0px -1px 10px 0px rgba(0,0,0,0.12);
+  background-color: #424242;
+}
+
 .loading-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.not-allowed {
+  cursor: not-allowed;
 }
 
 .rb-no-recipe-results-container {
