--- a/src/site.css
+++ b/src/site.css
@@ -33,6 +33,18 @@ main#main-content {
   cursor: not-allowed;
 }
 
+.page-not-found-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 99999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .rb-no-recipe-results-container {
   display: flex;
   flex-direction: column;
