--- a/src/site.css
+++ b/src/site.css
@@ -102,3 +102,9 @@ main#main-content {
   border-radius: 5px;
   background: rgba(255, 224, 222, 0.5);
 }
+
+.rb-snackbar-message {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
